Finish replacing joda with java.time